compiler/tests-spec/testData/psi/linked/expressions/constant-literals/real-literals/p-4/neg/1.1.kt
/*
 * KOTLIN PSI SPEC TEST (NEGATIVE)
 *
 * SPEC VERSION: 0.1-100
 * MAIN LINK: expressions, constant-literals, real-literals -> paragraph 4 -> sentence 1
 * NUMBER: 1
 * DESCRIPTION: Real literals with a not allowed underscore at the beginning.
 */

konst konstue = _.0_0f
konst konstue = _.0__0___0e1
konst konstue = _.0_0__0_0f

konst konstue = _.0
konst konstue = _.0______0
konst konstue = _______________00.0_0_0F

konst konstue = _001.0_0e10f
konst konstue = _4.33__3.00__0E-10
konst konstue = __4_44____4.00______00E0
konst konstue = _________555_________5.0E-0
konst konstue = _666_666.0_____________________________________________________________________________________________________________________0e-0000000f
konst konstue = ____.0_0_0F
konst konstue = _8888888_8.0000
konst konstue = _______9______9_____9____9___9__9_9.0f

konst konstue = _0_0_0_0_0_0_0_0_0.1234567890
konst konstue = _9e-10
konst konstue = ___234_5_678.345______________678E+000001000000____
konst konstue = ___3_456_7.4567E
konst konstue = _456.5_6F
konst konstue = _5.6_5
konst konstue = ___6_54.7654e-0
konst konstue = _7_6543.87654_3E+
konst konstue = _____________________876543_____________2.9_____________8765432E-1100F
konst konstue = _0_9_____________87654321.098765432_____________1ef

konst konstue = _000000000000000000000000000000000000000000000000000000000000000000000000000000000000000___0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000_0F
konst konstue = _______________0_000000000000000000000000000000000000000000000000000000000000000000000000000000000000000.0___000000000000000000000000000000000000000000000000000000000000000000000000000000000000000e-10
konst konstue = ___9999999999999999999999999999999999999999999_______________999999999999999999999999999999999999999999999.33333333333333333333333333333333333333333333333_33333333333333333333333333333333333333333E0
